<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back_detail_to_chat"
            android:layout_width="52dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.13"
            android:paddingLeft="5dip"
            android:text="@string/back_detail"
            android:textColor="@color/color_button_normal" />

        <TextView
            android:id="@+id/connector_name"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connector_detail"
            android:textSize="25sp"
            />
        <View
            android:layout_width="52dip"
            android:layout_height="1dip"
            android:layout_weight="0.13" />

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
   
    
    <LinearLayout
        android:id="@+id/chatview"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@drawable/gradient_view"
        android:orientation="vertical"
        >
        
       
    </LinearLayout>
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
			android:focusableInTouchMode="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#ffffffff"
            android:orientation="horizontal" >
        
         	  <EditText 
         	      android:id="@+id/et_chattext"
         	      android:layout_width="100dip"
         	      android:layout_height="30dip"
         	      android:layout_marginLeft="5dip"
         	      android:layout_marginRight="5dip"
         	      android:layout_weight="1"
         	      android:paddingLeft="5dip"
         	      android:background="@drawable/border_chattext"
         	      android:hint="@string/chating_hint"
         	      
         	      />
     		 <Button
		        android:id="@+id/bt_send"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="70dip"
		        android:layout_weight="0.2"
		        android:layout_height="30dip"
		        android:layout_gravity="center_vertical|right"
		        
		        android:layout_marginRight="8dip"
		       
		        android:background="@drawable/button_selector_back_white"
		        android:text="@string/chattext_send"
		        android:textColor="@color/color_button_normal" 
        />
        </LinearLayout>
</LinearLayout>
