<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fragment_background"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:layout_marginLeft="8dip"
        android:orientation="horizontal">
        
        <ImageView
        android:id="@+id/my_user_photo"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:src="@drawable/user_icon"
        android:background="@drawable/border_imageview"/>
        
        <LinearLayout 
            android:layout_width="200dip"
            android:layout_height="1dip">
        </LinearLayout>
         <Button
        android:id="@+id/exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_gravity="center_vertical|right"
        
        android:layout_marginRight="8dip"
       
        android:background="@drawable/button_selector_back_white"
        android:text="@string/btntext_exit"
        android:textColor="@color/color_button_normal" 
        />
    </LinearLayout>
   
    
    <TableLayout
        android:id="@+id/tablelayout_mail_listviewitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:stretchColumns="0" 
        android:background="@drawable/border_tableview" 
        >
        
        <TableRow
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                
	                android:hint="@string/account_hint"
	                />
	                <TextView
	                android:id="@+id/my_account"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                
	                />
            </LinearLayout>
            
        </TableRow>
        <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
        <TableRow
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:hint="@string/nick_name"
	                />
	                <TextView
	                android:id="@+id/my_nick_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                />
            </LinearLayout>
             
        </TableRow>
      <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
        <TableRow
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:hint="@string/bithday"
	                />
	                <TextView
	                android:id="@+id/my_bithday"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                />
            </LinearLayout>
             
        </TableRow>
        
        <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
        <TableRow
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:hint="@string/email"
	                />
	                <TextView
	                android:id="@+id/my_email"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                />
            </LinearLayout>
             
        </TableRow>
     </TableLayout>

    <TextView
        android:id="@+id/sign_label"
        android:layout_marginLeft="8dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign" 
        android:textColor="@color/color_text"/>

    <TextView
        android:id="@+id/my_sign"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:padding="10dip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_tableview"
        />
    
</LinearLayout>
