<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient_view"
    tools:context=".ALoginView" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />
     <ImageView
        android:id="@+id/user_photo"
        android:layout_width="95dip"
        android:layout_height="95dip"
        android:layout_marginTop="0dip"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:src="@drawable/user_icon"
        android:background="@drawable/border_imageview"/>

   
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="10dip"
        ></LinearLayout>
    <TableLayout
        android:id="@+id/tablelayout_mail_listviewitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:stretchColumns="0" 
        android:background="@drawable/border_tableview" 
        >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="5dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="5dip"
		        android:orientation="horizontal" 
		        >
	                <EditText
	                android:id="@+id/account"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:background="@drawable/border_edittext"
	                android:hint="@string/account_hint"
	                android:singleLine="true"
	                android:lines="1"
	                android:enabled="false"
	                />
            </LinearLayout>
            
        </TableRow>
        <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="5dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="5dip"
		        android:orientation="horizontal" >
	                
	                <EditText
	                android:id="@+id/pass"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:background="@drawable/border_edittext"
	                android:inputType="textPassword"
	                android:hint="@string/password_hint"
	                android:singleLine="true"
	                android:lines="1"
	                android:enabled="false"
	                />
	                
	         </LinearLayout>
             
        </TableRow>
     </TableLayout>

    
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginBottom="10dip"
        android:text="@string/btntext_login" 
        android:background="@drawable/button_selector_back_blue"
        android:onClick="OnLoginClick"
        android:textColor="@color/color_button_text"
        android:enabled="false"
        />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="32dip"
        android:orientation="horizontal">
        
         <LinearLayout
        	android:layout_width="0dip"
        	android:layout_height="fill_parent"
        	android:layout_weight="0.9"
        />
	    
	    <Button
	        android:id="@+id/new_user"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="71dip"
	        android:layout_height="30dip"
	        android:layout_weight="0.1"
	        android:background="@drawable/button_selector_back_white"
	        android:text="@string/btntext_newuser"
	        android:onClick="OnRegister"
	        android:textColor="@color/color_button_normal" 
	        />    
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />
</LinearLayout>
