<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/back"
            android:layout_width="52dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.08"
            android:paddingLeft="5dip"
            android:textColor="@color/color_button_normal"
            android:text="@string/back_connectors" />

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/connector_detail"
            android:textSize="25sp"
            />
        <View
            android:layout_width="52dip"
            android:layout_height="1dip"
            android:layout_weight="0.08" />

    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_fragment_background"
        android:orientation="vertical">
        <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="70dip"
        android:layout_marginLeft="8dip"
        android:orientation="horizontal">
        
        <ImageView
        android:id="@+id/my_user_photo"
        android:layout_width="60dip"
        android:layout_height="60dip"
        android:layout_gravity="center_vertical"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:paddingTop="3dip"
        android:paddingBottom="3dip"
        android:src="@drawable/user_icon"
        android:background="@drawable/border_imageview"/>
        
        <LinearLayout 
            android:layout_width="200dip"
            android:layout_height="1dip">
        </LinearLayout>
       
    </LinearLayout>
   
    
    <TableLayout
        android:id="@+id/tablelayout_mail_listviewitem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:stretchColumns="0" 
        android:background="@drawable/border_tableview" 
        >
        
        <TableRow
           
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                
	                android:hint="@string/account_hint"
	                />
	                <TextView
	                android:id="@+id/account"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                
	                
	                />
            </LinearLayout>
            
        </TableRow>
        <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
        <TableRow
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:hint="@string/nick_name"
	                />
	                <TextView
	                android:id="@+id/nick_name"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                
	                />
            </LinearLayout>
             
        </TableRow>
      <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
        <TableRow
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_marginBottom="8dip"
		        android:layout_marginLeft="10dip"
		        android:layout_marginRight="10dip"
		        android:layout_marginTop="8dip"
		        android:orientation="horizontal" 
		        >
	                <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center_vertical"
	                android:hint="@string/bithday"
	                />
	                <TextView
	                android:id="@+id/bithday"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="10dip"
	                android:gravity="center_vertical"
	                />
            </LinearLayout>
             
        </TableRow>
        
                
     </TableLayout>

    <TextView
        android:id="@+id/sign_label"
        android:layout_marginLeft="8dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign" 
        android:textColor="@color/color_text"/>

    <TextView
        android:id="@+id/sign"
        android:layout_marginBottom="10dip"        
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:padding="10dip"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:background="@drawable/border_tableview"
        />
    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/color_fragment_background"
        android:orientation="vertical"
        ></LinearLayout>
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:background="@color/color_line"
         />
    
     <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#ffffffff"
            android:orientation="horizontal" >
        
         	  <ImageButton
	                android:id="@+id/bt_photo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="#ffffffff"
	                android:layout_weight="1"
	                android:src="@drawable/photo_button_selector"
                />
         	   <View
		        android:layout_width="1dip"
		        android:layout_height="match_parent"
		        android:background="@color/color_line"
		         />
			     <ImageButton
                android:id="@+id/bt_chat"
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#ffffffff"
                android:layout_weight="1"
                android:src="@drawable/chat_button_selector"
                />
			
        </LinearLayout>
</LinearLayout>
